@@ -149,13 +149,7 @@ name|this
 argument_list|(
 name|clazz
 argument_list|,
-name|Thread
-operator|.
-name|currentThread
-argument_list|()
-operator|.
-name|getContextClassLoader
-argument_list|()
+literal|null
 argument_list|)
 expr_stmt|;
 block|}
