@@ -133,6 +133,12 @@ Other
 * LUCENE-7719: Generalized the UnifiedHighlighter's support for AutomatonQuery
   for character & binary automata. Added AutomatonQuery.isBinary. (David Smiley)
 
+* LUCENE-7873: Due to serious problems with context class loaders in several
+  frameworks (OSGI, Java 9 Jigsaw), the lookup of Codecs, PostingsFormats,
+  DocValuesFormats and all analysis factories was changed to only inspect the
+  current classloader that defined the interface class (lucene-core.jar).
+  See MIGRATE.txt for more information!  (Uwe Schindler, Dawid Weiss)
+
 ======================= Lucene 6.7.0 =======================
 
 New Features
